# contracts

./: .gitignore  BUG_BOUNTY_REPORT.txt  BUG_REPORT.md  PROPOSED_FIX.txt  PULL_REQUEST_DESCRIPTION.md  README.md  VULNERABILITY_REPORT.md  VULNERABILITY_REPORT_LP_FEE_DUST.md  machine_readable_report.yaml  pyproject.toml  vulnerability_report.txt
.algokit/: .copier-answers.yml
audit/: bug13_solvency_lock_dispute.txt  bug2_bootstrap_lp_shares_stuck.py  bug2_gtxn_double_spend.py  bug3_lp_fee_dust_lock.py  bug3_lp_sniping.py  bug4_dust_fee_lock.py  bug5_stuck_dispute.py  solvency_lock_fix_report.txt
fixes/: bounty_100_1777699815.py
scripts/: contracts-launch-gate.sh  emit_lmsr_reference_vectors.py  poc_mbr_drain.py  repro.sh  repro_question_market.py  repro_solvency_lock_localnet.py
smart_contracts/: __main__.py  abi_types.py  lmsr_math.py  lmsr_math_avm.py
tests/: conftest.py  generate_lmsr_reference_vectors.py  lmsr_test_helpers.py  market_app_test_utils.py  repro_solvency_lock.py  test_active_lp_calibration_upgrade.py  test_active_lp_candidate.py  test_active_lp_candidate_vs_reference.py  test_active_lp_experiments.py  test_active_lp_fpmm.py  test_active_lp_fpmm_comparison.py  test_active_lp_high_skew_boundary.py  test_active_lp_interface.py  test_active_lp_layer_c.py  test_active_lp_layer_c_analysis.py  test_active_lp_layer_c_vs_reference.py  test_active_lp_paper_artifacts.py  test_active_lp_reference_engine.py  test_active_lp_reference_math.py  test_active_lp_residual_weight_analysis.py  test_active_lp_scenarios.py  test_c4_dispute_hardening.py  test_helpers.py  (+34 more)
(+33 files in other folders)
